src/Grammars/Ebnf/IsoEbnfParser.php
<?php namespace Helstern\Nomsky\Grammars\Ebnf;


use Helstern\Nomsky\Exception\SyntacticException;
use Helstern\Nomsky\Grammars\Ebnf\Ast\AlternativeNode;
use Helstern\Nomsky\Parser\AstNode;
use Helstern\Nomsky\Grammars\Ebnf\Ast\GroupedExpressionNode;
use Helstern\Nomsky\Grammars\Ebnf\Ast\IdentifierNode;
use Helstern\Nomsky\Grammars\Ebnf\Ast\LiteralNode;
use Helstern\Nomsky\Grammars\Ebnf\Ast\RepeatedExpressionNode;
use Helstern\Nomsky\Grammars\Ebnf\Ast\OptionalExpressionNode;
use Helstern\Nomsky\Grammars\Ebnf\Ast\ProductionNode;
use Helstern\Nomsky\Grammars\Ebnf\Ast\SequenceNode;
use Helstern\Nomsky\Grammars\Ebnf\Ast\SyntaxNode;
use Helstern\Nomsky\Parser\ParseAssertion\TokenAssertions;
use Helstern\Nomsky\Parser\Lexer;

use Helstern\Nomsky\Grammars\Ebnf\IsoEbnfTokens\TokenTypesEnum;

/**
 * Class StandardEbnfParser
 * @see http://standards.iso.org/ittf/PubliclyAvailableStandards/s026153_ISO_IEC_14977_1996(E).zip
 */
class IsoEbnfParser
{
    /** @var TokenAssertions */
    protected $tokenAssertions;

    /**
     * @param TokenAssertions $tokenAssertions
     */
    public function __construct(TokenAssertions $tokenAssertions)
    {
        $this->tokenAssertions = $tokenAssertions;
    }

    /**
     * @param Lexer $lexer
     * @return SyntaxNode
     */
    public function parse(Lexer $lexer)
    {
        $astNode = $this->parseSyntax($lexer);
        return $astNode;
    }

    /**
     * @param Lexer $lexer
     * @return SyntaxNode
     */
    protected function parseSyntax(Lexer $lexer)
    {
        $token = $lexer->currentToken();
        $this->tokenAssertions->assertNotEOF('Empty grammar', $token);

        $startTextPosition = null;
        $grammarTitle = null;
        $grammarComment = null;

        if ($token->getType() == TokenTypesEnum::ENUM_STRING_LITERAL) {
            $grammarTitle = $this->parseStringLiteral($lexer);
            $lexer->nextToken();
        }

        $token = $lexer->currentToken();
        $this->tokenAssertions->assertSameType('expected token', $token, TokenTypesEnum::ENUM_START_REPEAT);
        if (is_null($startTextPosition)) {
            $startTextPosition = $token->getPosition();
        }
        $lexer->nextToken();

        $productionNodes = array();
        $token = $lexer->currentToken();
        while ($token->getType() == TokenTypesEnum::ENUM_COMMENT) {
            $productionNodes[] = $this->parseComment($lexer);
            $lexer->nextToken();
            $token = $lexer->currentToken();
        }

        while ($token->getType() == TokenTypesEnum::ENUM_IDENTIFIER) {
            $productionNodes[] = $this->parseRule($lexer);
            $lexer->nextToken();
            $token = $lexer->currentToken();

            if ($token->getType() == TokenTypesEnum::ENUM_COMMENT) {
                $productionNodes[] = $this->parseComment($lexer);
                $lexer->nextToken();
                $token = $lexer->currentToken();
            }
        }

        $this->tokenAssertions->assertSameType('expected token', $token, TokenTypesEnum::ENUM_END_REPEAT);
        $lexer->nextToken();
        $token = $lexer->currentToken();


        if ($token->getType() == TokenTypesEnum::ENUM_STRING_LITERAL) {
            $grammarComment = $this->parseStringLiteral($lexer);
            $lexer->nextToken();
            $token = null;
        }

        $syntaxNode = new SyntaxNode($startTextPosition, $productionNodes, $grammarTitle, $grammarComment);
        return $syntaxNode;
    }

    /**
     * @param Lexer $lexer
     * @return LiteralNode
     * @throws \Helstern\Nomsky\Exception\SyntacticException
     */
    protected function parseComment(Lexer $lexer)
    {

        $token = $lexer->currentToken();

        if ($token->getType() != TokenTypesEnum::ENUM_COMMENT) {
            throw new SyntacticException($token, 'Expected ' . TokenTypesEnum::ENUM_COMMENT);
        }

        $textPosition = $token->getPosition();
        $literal = $token->getValue();

        $node = new LiteralNode($textPosition, $literal);
        return $node;
    }

    /**
     * @param Lexer $lexer
     * @return ProductionNode
     */
    protected function parseRule(Lexer $lexer)
    {
        $identifierNode = $this->parseIdentifier($lexer);

        $peekToken = $lexer->peekToken();
        $this->tokenAssertions->assertSameType('expected token', $peekToken, TokenTypesEnum::ENUM_DEFINITION_LIST_START);

        $lexer->nextToken();
        $expressionNode = $this->parseExpression($lexer);

        $peekToken = $lexer->peekToken();

        $this->tokenAssertions->assertSameType('invalid token type %s at %s, expected %s', $peekToken, TokenTypesEnum::ENUM_TERMINATOR);
        $lexer->nextToken();

        $textPosition = $identifierNode->getTextPosition();
        $node = new ProductionNode($textPosition, $identifierNode, $expressionNode);
        return $node;
    }

    /**
     * @param Lexer $lexer
     * @throws SyntacticException
     * @return IdentifierNode
     */
    protected function parseIdentifier(Lexer $lexer)
    {
        $token = $lexer->currentToken();
        $this->tokenAssertions->assertSameType('expected token', $token, TokenTypesEnum::ENUM_IDENTIFIER);

        $identifierName = $token->getValue();
        $textPosition = $token->getPosition();
        $node = new IdentifierNode($textPosition, $identifierName);

        return $node;
    }

    /**
     * @param Lexer $lexer
     * @return AlternativeNode|GroupedExpressionNode|IdentifierNode|LiteralNode|RepeatedExpressionNode|OptionalExpressionNode|SequenceNode
     */
    protected function parseExpression(Lexer $lexer)
    {
        $head = $this->parseTerm($lexer);
        $tail = array();

        $peekToken = $lexer->peekToken();
        $predicates = $this->tokenAssertions->getPredicates();
        while ($predicates->hasSameType($peekToken, TokenTypesEnum::ENUM_DEFINITION_SEPARATOR)) {
            $lexer->nextToken();
            $tail[] = $this->parseTerm($lexer);

            $peekToken = $lexer->peekToken();
        }

        if (empty($tail)) {
            return $head;
        }

        $textPosition = $head->getTextPosition();
        $node = new AlternativeNode($textPosition, $head, $tail);
        return $node;
    }

    /**
     * @param Lexer $lexer
     * @return GroupedExpressionNode|IdentifierNode|LiteralNode|RepeatedExpressionNode|OptionalExpressionNode|SequenceNode
     */
    protected function parseTerm(Lexer $lexer)
    {
        //first factor
        $head = $this->parseFactor($lexer);

        $tail = array();
        $predicates = $this->tokenAssertions->getPredicates();
        $peekToken = $lexer->peekToken();
        while ($predicates->hasSameType($peekToken, TokenTypesEnum::ENUM_CONCATENATE)) {
            $lexer->nextToken();
            $tail[] = $this->parseFactor($lexer);

            $peekToken = $lexer->peekToken();
        }

        if (empty($tail)) {
            return $head;
        }

        $textPosition = $head->getTextPosition();
        $node = new SequenceNode($textPosition, $head, $tail);
        return $node;
    }

    /**
     * @param Lexer $lexer
     * @return GroupedExpressionNode|IdentifierNode|LiteralNode|RepeatedExpressionNode|OptionalExpressionNode
     * @throws \Exception
     */
    protected function parseFactor(Lexer $lexer)
    {
        $predicates = $this->tokenAssertions->getPredicates();
        $peekToken = $lexer->peekToken();

        /** @var AstNode $node */
        $node = null;
        if ($predicates->hasSameType($peekToken, TokenTypesEnum::ENUM_IDENTIFIER)) {
            $lexer->nextToken();
            $node = $this->parseIdentifier($lexer);
        } elseif ($predicates->hasSameType($peekToken, TokenTypesEnum::ENUM_STRING_LITERAL)) {
            $lexer->nextToken();
            $node = $this->parseStringLiteral($lexer);
        } elseif ($predicates->hasSameType($peekToken, TokenTypesEnum::ENUM_SPECIAL_SEQUENCE)) {
            $lexer->nextToken();
            $node = $this->parseSpecialExpression($lexer);
        } elseif ($predicates->hasSameType($peekToken, TokenTypesEnum::ENUM_START_OPTION)) {
            $lexer->nextToken();
            $node = $this->parseOptionalExpression($lexer);
        } elseif ($predicates->hasSameType($peekToken, TokenTypesEnum::ENUM_START_GROUP)) {
            $lexer->nextToken();
            $node = $this->parseGroupedExpression($lexer);
        } elseif ($predicates->hasSameType($peekToken, TokenTypesEnum::ENUM_START_REPEAT)) {
            $lexer->nextToken();
            $node = $this->parseRepeatedExpression($lexer);
        }

        if (is_null($node)) {
            throw new \Exception('boo');
        }

        return $node;
    }

    protected function parseStringLiteral(Lexer $lexer)
    {
        $token = $lexer->currentToken();

        if ($token->getType() != TokenTypesEnum::ENUM_STRING_LITERAL) {
            throw new SyntacticException($token, 'Expected ' . TokenTypesEnum::ENUM_STRING_LITERAL);
        }

        $textPosition = $token->getPosition();
        $literal = $token->getValue();

        $node = new LiteralNode($textPosition, $literal);
        return $node;
    }

    /**
     * @param Lexer $lexer
     * @throws SyntacticException
     * @return LiteralNode
     */
    protected function parseSpecialExpression(Lexer $lexer)
    {
        $token = $lexer->currentToken();

        if ($token->getType() != TokenTypesEnum::ENUM_SPECIAL_SEQUENCE) {
            throw new SyntacticException($token, 'Expected ' . TokenTypesEnum::ENUM_SPECIAL_SEQUENCE);
        }

        $textPosition = $token->getPosition();
        $literal = $token->getValue();

        $node = new LiteralNode($textPosition, $literal);
        return $node;
    }

    /**
     * @param Lexer $lexer
     * @return OptionalExpressionNode
     */
    protected function parseOptionalExpression(Lexer $lexer)
    {
        $token = $lexer->currentToken();
        $this->tokenAssertions->assertSameType('expected token', $token, TokenTypesEnum::ENUM_START_OPTION);
        $startPosition = $token->getPosition();

        $expression = $this->parseExpression($lexer);

        $peekToken = $lexer->peekToken();
        $this->tokenAssertions->assertSameType('expected token', $peekToken, TokenTypesEnum::ENUM_END_OPTION);
        $lexer->nextToken();

        $node = new OptionalExpressionNode($startPosition, $expression);
        return $node;
    }

    /**
     * @param Lexer $lexer
     * @return OptionalExpressionNode
     */
    protected function parseGroupedExpression(Lexer $lexer)
    {
        $token = $lexer->currentToken();
        $this->tokenAssertions->assertSameType('expected token', $token, TokenTypesEnum::ENUM_START_GROUP);
        $startPosition = $token->getPosition();

        $expression = $this->parseExpression($lexer);

        $peekToken = $lexer->peekToken();
        $this->tokenAssertions->assertSameType('expected token', $peekToken, TokenTypesEnum::ENUM_END_GROUP);
        $lexer->nextToken();

        $node = new GroupedExpressionNode($startPosition, $expression);
        return $node;
    }

    /**
     * @param Lexer $lexer
     * @return OptionalExpressionNode
     */
    protected function parseRepeatedExpression(Lexer $lexer)
    {
        $token = $lexer->currentToken();
        $this->tokenAssertions->assertSameType('expected token', $token, TokenTypesEnum::ENUM_START_REPEAT);
        $startPosition = $token->getPosition();

        $expression = $this->parseExpression($lexer);

        $peekToken = $lexer->peekToken();
        $this->tokenAssertions->assertSameType('expected token', $peekToken, TokenTypesEnum::ENUM_END_REPEAT);
        $lexer->nextToken();

        $node = new RepeatedExpressionNode($startPosition, $expression);
        return $node;
    }
}
